adicionando banco de dados

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,6 +21,23 @@
  	<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/ie.css'}">
  	<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bs.css'}">
  	
+        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bootstrap-fileupload.min.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/validation.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/DT_bootstrap.css'}">
+
+		
+        <script src="@{'/public/javascripts/jquery-1.9.min.js'}" type="text/javascript" ></script>
+        <script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript" ></script>
+		<script src="@{'/public/javascripts/bootstrap-fileupload.min.js'}" type="text/javascript" ></script>
+		<script src="@{'/public/javascripts/bootstrap-datepicker.js'}" type="text/javascript" ></script>
+		<script src="@{'/public/javascripts/bootstrap-dropdown.js'}" type="text/javascript" ></script>
+		<script src="@{'/public/javascripts/jquery.maskMoney.js'}" type="text/javascript" ></script>
+		<script src="@{'/public/javascripts/jquery.validate.js'}" type="text/javascript" ></script>
+		<script src="@{'/public/javascripts/util-jquery.validate.js'}" type="text/javascript" ></script>
+		<script src="@{'/public/javascripts/DT_bootstrap.js'}" type="text/javascript"></script>
+		<script src="@{'/public/javascripts/jquery.dataTables.js'}" type="text/javascript"></script>	
+		<script src="@{'/public/javascripts/util.js'}" type="text/javascript" ></script>	
+ 	
     <style type="text/css">
       body {
         padding-top: 60px;
