--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,28 +1,344 @@
 #{extends 'main.html' /}
-#{set title:'Home' /}
+#{set title:'Home' /} 
+#{get 'moreStyles' /}
+#{get 'moreScripts' /}
 
-<!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Redacao Online</h1>
-        <p>Esta se preparando para o vestibular, concurso? Treine sua redacao com professores capacitados</p>
-        <p><a href="signup" class="btn btn-primary btn-large">Cadastre-se aqui</a></p>
-      </div>
-          
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+<html>
+<body>
+    <div id="hero">
+        <div class="container">
+            <!-- starts carousel -->
+            <div class="row animated fadeInDown">
+                <div class="span12">
+                    <div id="myCarousel" class="carousel slide">
+                        <!-- carousel items -->
+                        <div class="carousel-inner">
+                            <!-- slide -->
+                            <div class="active item slide1">
+                                <div class="row">
+                                    <div class="span6">
+                                        <img src="/public/img/slide1.png" alt="slide1" />
+                                    </div>
+                                    <div class="span4">
+                                        <h1>
+                                            Responsive and Clean Wrapbootstrap Theme
+                                        </h1>
+                                        <p>
+                                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look.
+                                        </p>
+                                        <a href="https://wrapbootstrap.com/theme/measure-responsive-business-theme-WB0D95984" class="btn btn-success btn-large">
+                                            Get Measure Now!
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- slide -->
+                            <div class="item slide2">
+                                <div class="row">
+                                    <div class="span4 animated fadeInUpBig">
+                                        <h1>Fully responsive blog template</h1>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisi ut aliquip ex ea commodo consequat.
+                                        </p>
+                                        <a href="blog.html" class="btn btn-success btn-large">
+                                            Watch it now!
+                                        </a>
+                                    </div>
+                                    <div class="span6 animated fadeInDownBig">
+                                        <img src="/public/img/slide2.png" alt="slide2" />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- slide -->
+                            <div class="item slide3 animated fadeInUpBig">
+                                <img src="/public/img/slide3.png" alt="slide3" />
+                            </div>
+                        </div>
+                        <!-- Carousel nav -->
+                        <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+                        <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+    </div>
+    <div id="intro">
+        <div class="container">
+            <h1>Measure is a beautiful Wrapbootstrap theme for 
+                businesses and creative professionals.</h1>
         </div>
-      </div>
+    </div>
+
+    <!-- features -->
+    <div id="features">
+        <div class="container">
+            <!-- header -->
+            <h2 class="section_header">
+                <hr class="left visible-desktop">
+                <span>Features</span>
+                <hr class="right visible-desktop">
+            </h2>
+
+            <!-- feature list -->
+            <div class="row">
+                <div class="span4 feature">
+                    <img src="/public/img/feature1.jpg" alt="feature1" class="thumb" />
+                    <h3>
+                        <i class="i_cloud"></i> Responsive clean theme
+                    </h3>
+                    <p class="description">
+                        There are many variations of passages of Lorem Ipsum available, but the 
+                        majority have suffered alteration in some form, by injected humour, or randomised 
+                        words which don't look even slightly believable.
+                    </p>
+                    <a href="#" class="btn btn-default">more</a>
+                </div>
+                <div class="span4 feature">
+                    <img src="/public/img/feature2.jpg" alt="feature2" class="thumb" />
+                    <h3>
+                        <i class="i_chart"></i> Responsive clean theme
+                    </h3>
+                    <p class="description">
+                        There are many variations of passages of Lorem Ipsum available, but the 
+                        majority have suffered alteration in some form, by injected humour, or randomised 
+                        words which don't look even slightly believable.
+                    </p>
+                    <a href="#" class="btn btn-default">more</a>
+                </div>
+                <div class="span4 feature">
+                    <img src="/public/img/feature3.jpg" alt="feature3" class="thumb" />
+                    <h3>
+                        <i class="i_movil"></i> Responsive clean theme
+                    </h3>
+                    <p class="description">
+                        There are many variations of passages of Lorem Ipsum available, but the 
+                        majority have suffered alteration in some form, by injected humour, or randomised 
+                        words which don't look even slightly believable.
+                    </p>
+                    <a href="#" class="btn btn-default">more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- starts pricing -->
+    <div id="pricing">
+        <div class="container">
+            <!-- header -->
+            <h2 class="section_header">
+                <hr class="left visible-desktop">
+                <span>
+                    Pricing 
+                    <small>
+                        See all plan details here</small>
+                </span>
+                <hr class="right visible-desktop">
+            </h2>
+
+            <!-- pricing charts -->
+            <div class="row">
+                <div class="span4">
+                    <div class="price_wrapper lite regular">
+                        <div class="header">
+                            <span>Lite</span>
+                            <div class="price">
+                                <span>$ 35</span>
+                                Per Month
+                            </div>
+                        </div>
+                        <div class="section">
+                            <h3>Passages of Lorem randomised
+                                words which look slightly.</h3>
+                            <ul class="perks">
+                                <li>
+                                    <i class="i_shuffle"></i>
+                                    Cross-browser
+                                </li>
+                                <li>
+                                    <i class="i_loading"></i>
+                                    Fast-loading
+                                </li>
+                            </ul>
+                            <a href="#" class="btn">Order now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="span4">
+                    <div class="price_wrapper pro">
+                        <div class="header">
+                            <span>Pro</span>
+                            <div class="price">
+                                <span>$ 99</span>
+                                Per Month
+                            </div>
+                        </div>
+                        <div class="section">
+                            <h3>Passages of Lorem randomised
+                                words which look slightly.</h3>
+                            <ul class="perks">
+                                <li>
+                                    <i class="i_shuffle"></i>
+                                    Cross-browser
+                                </li>
+                                <li>
+                                    <i class="i_loading"></i>
+                                    Fast-loading
+                                </li>
+                                <li>
+                                    <i class="i_bookmark"></i>
+                                    Bookmarkable URLs
+                                </li>
+                                <li>
+                                    <i class="i_bars"></i>
+                                    W3C Standards
+                                </li>
+                            </ul>
+                            <a href="#" class="btn">Order now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="span4">
+                    <div class="price_wrapper standard regular">
+                        <div class="header">
+                            <span>Standard</span>
+                            <div class="price">
+                                <span>$ 65</span>
+                                Per Month
+                            </div>
+                        </div>
+                        <div class="section">
+                            <h3>Passages of Lorem randomised
+                                words which look slightly.</h3>
+                            <ul class="perks">
+                                <li>
+                                    <i class="i_shuffle"></i>
+                                    Cross-browser
+                                </li>
+                                <li>
+                                    <i class="i_loading"></i>
+                                    Fast-loading
+                                </li>
+                                <li>
+                                    <i class="i_bookmark"></i>
+                                    Bookmarkable URLs
+                                </li>
+                            </ul>
+                            <a href="#" class="btn">Order now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- starts testimonial -->
+    <div id="testimonials">
+        <div class="container">
+            <div class="controls">
+                <hr>
+            </div>
+            <div class="phrases_wrapper">
+                <div class="phrase">
+                    <div class="row">
+                        <div class="span7">
+                            <p class="testimony">
+                                There are many variations of passages words which don't look even slightly passage of anything embarrassing hidden in the middle.
+                                <span>"</span>
+                            </p>
+                        </div>
+                        <div class="span3 offset1">
+                            <div class="pic">
+                                <img src="/public/img/pic1.jpg" alt="author" class="img-circle" />
+                                <span class="name">Alejandra Galvan Castillo</span>
+                                <span class="position">Bootstrap wizard</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- starts footer -->
+    <div id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="span8">
+                    <h3>From the Blog</h3>
+                    <div class="blog_post">
+                        <div class="row">
+                            <div class="span2">
+                                <a href="blog.html">
+                                    <img src="/public/img/pic_blog.png" alt="post image" class="img-circle" />
+                                </a>
+                            </div>
+                            <div class="span4">
+                                <a href="blog.html" class="title">
+                                    Lorem Ipsum is simply dummy 
+                                </a>
+                                <div class="intro">
+                                    There are many variations of passages of Lorem alteration in some form by injected look even slightly believable.
+                                </div>
+                                <div class="date">
+                                    Oct 22. 2012
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="span4 contact_us">
+                    <h3>Contact Us</h3>
+                    <form class="form-horizontal">
+                        <div class="field">
+                            <div class="label_field">
+                                <label for="inputName">Name</label>
+                            </div>
+                            <input type="text" id="inputName" />
+                        </div>
+
+                        <div class="field">
+                            <div class="label_field">
+                                <label for="inputEmail">Email</label>
+                            </div>
+                            <input type="text" id="inputEmail" />
+                        </div>
+
+                        <div class="field">
+                            <div class="label_field">
+                                <label for="inputCity">City</label>
+                            </div>
+                            <input type="text" id="inputCity" />
+                        </div>
+
+                        <div class="field">
+                            <div class="label_field">
+                                <label for="inputComment">Comments</label>
+                            </div>
+                            <textarea name="comments"></textarea>
+                        </div>
+                        <button type="submit" class="btn">Send</button>
+                    </form>
+                </div>
+            </div>
+            <hr>
+            <div class="row copyright">
+                <div class="span5">
+                    <h3>Social</h3>
+                    <a href="#" class="social fb">
+                        <i class="i_facebook"></i>
+                    </a>
+                    <a href="#" class="social tw">
+                        <i class="i_twitter"></i>
+                    </a>
+                    <a href="#" class="social yt">
+                        <i class="i_youtube"></i>
+                    </a>
+                </div>
+                <div class="span2 offset5 copy">
+                    <p>2012 - Measure Template</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </body>
+    </html>
