--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -4,7 +4,10 @@
 #{get 'moreScripts' /}
 
 <html>
-<body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/animate.css'}">
+	</head>
+	<body>
     <div id="hero">
         <div class="container">
             <!-- starts carousel -->
