--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,7 +6,13 @@
 	<!-- Bootstrap -->
     <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bootstrap.css'}">
     <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/theme.css'}">
+    <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/main.css'}">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    
+    <script src="@{'/public/javascripts/jquery-1.9.min.js'}"></script>
+    <script src="@{'/public/javascripts/bootstrap.min.js'}"></script>
+    <script src="@{'/public/javascripts/theme.js'}"></script>
+    
 </head>
 <body>
     <a href="#" class="scrolltop">
@@ -40,7 +46,5 @@
     </div>
     <!-- ends navbar -->
 	#{doLayout /}
-    <script src="@{'/public/javascripts/jquery-1.9.min.js'}"></script>
-    <script src="@{'/public/javascripts/bootstrap.min.js'}"></script>
-    <script src="@{'/public/javascripts/theme.js'}"></script>
+    
 </body>
