--- a/app/views/writing/index.html
+++ b/app/views/writing/index.html
@@ -1,9 +1,16 @@
 #{extends 'main.html' /}
 #{set title:'Home' /}
 
-<!-- Button to trigger modal -->
-    <a href="#myModal" role="button" class="btn" data-toggle="modal">Enviar Nova Redacão</a>
+<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/bootstrap-fileupload.min.css'}">
+#{get 'moreStyles' /}
+<script src="@{'/public/javascripts/bootstrap-fileupload.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+<script src="@{'/public/javascripts/writing.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+#{get 'moreScripts' /}
 
+	<!-- Button to trigger modal -->
+    <br/>
+    <a href="#myModal" role="button" class="btn" data-toggle="modal">Enviar Nova Redacão</a>
+	<br/><br/>
 	<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="grid">
       <thead>
                  <tr>
@@ -44,7 +51,8 @@
 					<div class="control-group">
 						<label class="control-label" for="nome">Título</label>
 						<div class="controls">
-							<input type="text" class="input-xlarge" id="title" name="title"> 
+							<input type="text" class="input-xlarge" id="title" name="title">
+							<div class="errorMessage" id="titleValidation"></div> 
 						</div>
 					</div>
 		
@@ -60,13 +68,15 @@
 						    	<span class="fileupload-exists">Alterar</span>
 						    	<input type="file"  name="writingFile" id="writingFile" /></span><a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remover</a>
 						  </div>
+						  <br/>
+						  <div class="errorMessage" id="writingFileValidation"></div>
 					</div>
 			    </fieldset>
 
 	  </div>
 	  <div class="modal-footer">
 	    <button class="btn" data-dismiss="modal" aria-hidden="true">Fechar</button>
-	    <button class="btn btn-primary" type="submit">Enviar</button>
+	    <button class="btn btn-primary" id="insertSubmitButton" type="button">Enviar</button>
 	  </div>
 	  #{/}
 	</div>
