Adicionando integração com o Facebookson

--- a/app/views/User/reset.html
+++ b/app/views/User/reset.html
@@ -14,17 +14,17 @@
 	                <div class="span12 box">
 	                    <div>
 	                        <div class="head">
-	                            <h4>Enter your email address below to receive instructions on how to reset your password.</h4>
+	                            <h4>Digite seu email para enviarmos uma nova senha.</h4>
 	                        </div>
 	                        <div class="form">
 	                            <form>
-	                                <input type="text" placeholder="Email address"/>
-	                                <input type="submit" class="btn" value="Reset password"/>
+	                                <input type="text" placeholder="Email"/>
+	                                <input type="submit" class="btn" value="Resetar senha"/>
 	                            </form>
 	                        </div>
 	                    </div>
 	                </div>
-	                <p class="already">Know your password? <a href="@{User.signin()}"> Sign in</a></p>
+	                <p class="already">Lembrou-se da sua senha? <a href="@{User.signin()}">Login</a></p>
 	            </div>
 	        </div>
 	    </div>
