--- a/app/views/User/signin.html
+++ b/app/views/User/signin.html
@@ -14,14 +14,50 @@
           //initializing API
           window.fbAsyncInit = function() {
             FB.init({appId: '435251833239716', status: true, cookie: true,
-                     xfbml: true});
+                     xfbml: true, channelUrl: "//localhost:9000/User/channel.html"});
+            
+            FB.Event.subscribe('auth.authResponseChange', function(response) {
+                // Here we specify what we do with the response anytime this event occurs. 
+                if (response.status === 'connected') {
+                  // The response object is returned with a status field that lets the app know the current
+                  // login status of the person. In this case, we're handling the situation where they 
+                  // have logged in to the app.
+                } else if (response.status === 'not_authorized') {
+                  // In this case, the person is logged into Facebook, but not into the app, so we call
+                  // FB.login() to prompt them to do so. 
+                  // In real-life usage, you wouldn't want to immediately prompt someone to login 
+                  // like this, for two reasons:
+                  // (1) JavaScript created popup windows are blocked by most browsers unless they 
+                  // result from direct interaction from people using the app (such as a mouse click)
+                  // (2) it is a bad experience to be continually prompted to login upon page load.
+                  FB.login();
+                } else {
+                  // In this case, the person is not logged into Facebook, so we call the login() 
+                  // function to prompt them to do so. Note that at this stage there is no indication
+                  // of whether they are logged into the app. If they aren't then they'll see the Login
+                  // dialog right after they log in to Facebook. 
+                  // The same caveats as above apply to the FB.login() call here.
+                  FB.login();
+                }
+              });          
+    		
           };
+          
+    		
           (function() {
             var e = document.createElement('script'); e.async = true;
             e.src = document.location.protocol +
               '//connect.facebook.net/pt_BR/all.js';
             document.getElementById('fb-root').appendChild(e);
           }());
+          
+          // Get information from logged user 
+          function getInfo() {
+            FB.api('/me', function(response) {
+          	    var newUrl = '/User/signInByFacebook?id=' + response.id + "&name=" + response.name + "&email=" + response.email;
+          	  	self.location=newUrl;
+            });
+          }          
         </script>
 	
     <div id="box_login">
@@ -73,10 +109,10 @@
 </html>
 
 <script>
-  //your fb login function
   function fblogin() {
     FB.login(function(response) {
-      alert('opa');
-    }, {scope:'read_stream,publish_stream,offline_access'});
+      getInfo();
+    }, {scope:'read_stream, email, public_profile, publish_stream,offline_access'});
   }
+
 </script>
