--- a/app/views/User/signup.html
+++ b/app/views/User/signup.html
@@ -1,68 +1,42 @@
 #{extends 'main.html' /}
 #{set title:'Home' /} 
 #{get 'moreStyles' /}
-<script src="@{'/public/javascripts/signin.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+
+<script src="@{'/public/javascripts/signup.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 #{get 'moreScripts' /}
 
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/signin.css'}">
+	<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/signup.css'}">
 </head>
 	<body>
-	<div id="fb-root"></div>
-        <script>
-          //initializing API
-          window.fbAsyncInit = function() {
-            FB.init({appId: '435251833239716', status: true, cookie: true,
-                     xfbml: true});
-          };
-          (function() {
-            var e = document.createElement('script'); e.async = true;
-            e.src = document.location.protocol +
-              '//connect.facebook.net/pt_BR/all.js';
-            document.getElementById('fb-root').appendChild(e);
-          }());
-        </script>
-	
-    <div id="box_login">
+    <div id="box_sign">
         <div class="container">
             <div class="span12 box_wrapper">
                 <div class="span12 box">
                     <div>
                         <div class="head">
-                            <h4>Entre na sua conta</h4>
-                        </div>
-                        <div class="social">
-                            <a style="cursor:pointer;" class="face_login" onclick="fblogin();return false;">
-                                <span class="face_icon">
-                                    <img src="/public/img/i_face.png" alt="fb" alt=""/>
-                                </span>
-                                <span class="text">Cadastrar pelo Facebook</span>
-                            </a>
-                            <div class="division">
-                                <hr class="left">
-                                <span>ou</span>
-                                <hr class="right">
-                            </div>
+                            <h4>Crie sua conta</h4>
                         </div>
                         <div class="form">
                             #{form id: 'formUser', action:@User.insert() }
-								<input type="text" placeholder="Nome" name="name" id="name"/>
-                                <div class="errorMessage" id="nameValidation">Nome inválido</div>                            
+                                <input type="text" placeholder="Nome" name="name" id="name"/>
+                                <div class="errorMessage" id="nameValidation">Digite um nome v√°lido</div>                            
                                 <input type="text" placeholder="Email" name="email" id="email"/>
-                                <div class="errorMessage" id="emailValidation">Digite um e-mail válido</div>                                
+                                <div class="errorMessage" id="emailValidation">Digite um e-mail v√°lido</div>
                                 <input type="password" placeholder="Senha" name="password" id="password"/>
-                                <div class="errorMessage" id="passwordValidation">Este campo é obrigatório</div>
-                                <input type="password" placeholder="Confirme Senha" name="passwordConfirmation" id="passwordConfirmation"/>
-                                <div class="errorMessage" id="passwordConfirmationValidation">Este campo é obrigatório</div>
+                                <div class="errorMessage" id="passwordValidation">Este campo ≈Ω obrigat√≥rio</div>
+                                <input type="password" placeholder="Confirme sua Senha" name="passwordConfirmation" id="passwordConfirmation"/>
+                                <div class="errorMessage" id="passwordConfirmationValidation">Este campo ≈Ω obrigat√≥rio</div>
                                 <input type="button" class="btn" id="insertSubmitButton" name="insertSubmitButton" value="Cadastro"/>
 							#{/}
                         </div>
                     </div>
                 </div>
-				<p class="already">Voc&#234; j&#225; tem uma conta? 
+                <p class="already">Voc¬ê j&#225; tem uma conta? 
                     <a href="@{User.signin()}">Entre</a></p>
             </div>
         </div>
-	</body>
+    </div>
+    </body>
 </html>
