--- a/app/views/User/signin.html
+++ b/app/views/User/signin.html
@@ -15,34 +15,8 @@
           window.fbAsyncInit = function() {
             FB.init({appId: '435251833239716', status: true, cookie: true,
                      xfbml: true, channelUrl: "//localhost:9000/User/channel.html"});
-            
-            FB.Event.subscribe('auth.authResponseChange', function(response) {
-                // Here we specify what we do with the response anytime this event occurs. 
-                if (response.status === 'connected') {
-                  // The response object is returned with a status field that lets the app know the current
-                  // login status of the person. In this case, we're handling the situation where they 
-                  // have logged in to the app.
-                } else if (response.status === 'not_authorized') {
-                  // In this case, the person is logged into Facebook, but not into the app, so we call
-                  // FB.login() to prompt them to do so. 
-                  // In real-life usage, you wouldn't want to immediately prompt someone to login 
-                  // like this, for two reasons:
-                  // (1) JavaScript created popup windows are blocked by most browsers unless they 
-                  // result from direct interaction from people using the app (such as a mouse click)
-                  // (2) it is a bad experience to be continually prompted to login upon page load.
-                  FB.login();
-                } else {
-                  // In this case, the person is not logged into Facebook, so we call the login() 
-                  // function to prompt them to do so. Note that at this stage there is no indication
-                  // of whether they are logged into the app. If they aren't then they'll see the Login
-                  // dialog right after they log in to Facebook. 
-                  // The same caveats as above apply to the FB.login() call here.
-                  FB.login();
-                }
-              });          
     		
           };
-          
     		
           (function() {
             var e = document.createElement('script'); e.async = true;
@@ -81,24 +55,23 @@
                                 <hr class="right">
                             </div>
                         </div>
-                        <div class="form">
-                            #{form id: 'formLogin', action:@User.login() }
-                                <input type="text" placeholder="Email" id="email" name="email"/>
-                                <div class="errorMessage" id="emailValidation"></div>
-                                <input type="password" placeholder="Password" id="password" name="password"/>
-                                <div class="errorMessage" id="passwordValidation"></div>
-                                <div class="remember">
-                                    <div class="left">
-                                        <input id="remember_me" type="checkbox">
-                                        <label for="remember_me">Lembrar</label>
-                                    </div>
-                                    <div class="right">
-                                        <a href="@{User.reset()}">Esqueceu sua senha?</a>
-                                    </div>
-                                </div>
-                                <input type="button" id="insertSubmitButton" class="btn" value="Entrar"/>
-                             #{/}
-                            </form>
+                        <div class="form">                        
+	                        #{form class: 'form', id: 'formLogin', action:@User.login() }
+	                            <input type="text" placeholder="Email" id="email" name="email"/>
+	                            <div class="errorMessage" id="emailValidation"></div>
+	                            <input type="password" placeholder="Password" id="password" name="password"/>
+	                            <div class="errorMessage" id="passwordValidation"></div>
+	                            <div class="remember">
+	                                <div class="left">
+	                                    <input id="remember_me" type="checkbox">
+	                                    <label for="remember_me">Lembrar</label>
+	                                </div>
+	                                <div class="right">
+	                                    <a href="@{User.reset()}">Esqueceu sua senha?</a>
+	                                </div>
+	                            </div>
+	                            <input type="button" id="insertSubmitButton" class="btn" value="Entrar"/>
+	                         #{/}
                         </div>
                     </div>
                 </div>
@@ -107,12 +80,17 @@
         </div>
 	</body>
 </html>
-
 <script>
   function fblogin() {
-    FB.login(function(response) {
-      getInfo();
-    }, {scope:'read_stream, email, public_profile, publish_stream,offline_access'});
+	  FB.getLoginStatus(function(responseStatus) {
+          if (responseStatus.status === 'connected') {
+              getInfo();
+          }
+          else{
+              FB.login(function(responseLogin) {
+                  getInfo();
+              }, {scope:'email, public_profile' });        	  
+          }
+  	});
   }
-
 </script>
